Update OpenApi documentation
